[gd_scene load_steps=13 format=2]

[ext_resource path="res://Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/bgr/bgr01.png" type="Texture" id=4]
[ext_resource path="res://assets/music/bgr01.ogg" type="AudioStream" id=5]
[ext_resource path="res://PauseCtrl.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/bgr/block01.png" type="Texture" id=7]
[ext_resource path="res://assets/bgr/block02.png" type="Texture" id=8]
[ext_resource path="res://assets/font/ka1.ttf" type="DynamicFontData" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 528.046, 161.365, 0, 0, 0, 0, 936, 129, 0, 0, 0, 0, 934.42, 555.041, 0, 0, 0, 0, 642.929, 556.333, 0, 0, 0, 0, 528.046, 545.516, 0, 0, 0, 0, 530.796, 129.22, 0, 0, 0, 0, 528.046, 161.365 )
}

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 9 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 1 )

[node name="PauseCtrl" parent="." instance=ExtResource( 6 )]
pause_mode = 2

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 636, 915 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 440, 900 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 528.046, 161.365 )
rotation = -0.0791784

[node name="ParallaxBackground" type="ParallaxBackground" parent="MobPath"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="MobPath/ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="MobPath/ParallaxBackground/ParallaxLayer"]
position = Vector2( 965, 505 )
scale = Vector2( 1.31593, 1.38358 )
texture = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="StreetItem01" type="ParallaxBackground" parent="."]
layer = 100

[node name="ParallaxLayer" type="ParallaxLayer" parent="StreetItem01"]

[node name="Sprite" type="Sprite" parent="StreetItem01/ParallaxLayer"]
position = Vector2( 1492, 1017.77 )
scale = Vector2( 0.482621, 0.557655 )
z_index = 10
texture = ExtResource( 7 )

[node name="StreetItem02" type="ParallaxBackground" parent="."]
layer = 100

[node name="ParallaxLayer" type="ParallaxLayer" parent="StreetItem02"]

[node name="Sprite" type="Sprite" parent="StreetItem02/ParallaxLayer"]
position = Vector2( 261, 1008 )
scale = Vector2( 0.546987, 0.619192 )
z_index = 10
texture = ExtResource( 8 )

[node name="UserInterface" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 2 )

[node name="Score" type="Label" parent="UserInterface"]
margin_left = 1425.0
margin_top = 36.0
margin_right = 1893.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0.0235294, 0.239216, 0.984314, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Score: 000000000"

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
